Add Customer create method

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "friendsofapi/boilerplate",
+    "name": "friendsofapi/sylius",
     "description": "A good base for a API client",
     "license": "MIT",
     "keywords": ["api"],
