--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "php-http/httplug": "^1.0",
+        "php": "^7.1",
+        "php-http/httplug": "^1.0 || ^2.0",
         "php-http/multipart-stream-builder": "^1.0",
         "php-http/client-common": "^1.1",
         "php-http/discovery": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^7.4",
         "php-http/message-factory": "^1.0",
         "php-http/curl-client": "^1.6",
         "php-http/message": "^1.0",
