--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "php": "^7.1",
         "php-http/httplug": "^1.0 || ^2.0",
         "php-http/multipart-stream-builder": "^1.0",
-        "php-http/client-common": "^1.1",
+        "php-http/client-common": "^1.1 || ^2.0",
         "php-http/discovery": "^1.0"
     },
     "require-dev": {
