--- a/composer.json
+++ b/composer.json
@@ -21,16 +21,17 @@
         "php": "^7.1",
         "php-http/httplug": "^1.0 || ^2.0",
         "php-http/multipart-stream-builder": "^1.0",
-        "php-http/client-common": "^1.1 || ^2.0",
+        "php-http/client-common": "^2.0",
         "php-http/discovery": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.4",
         "php-http/message-factory": "^1.0",
-        "php-http/curl-client": "^1.6",
+        "php-http/curl-client": "^2.0",
         "php-http/message": "^1.0",
-        "guzzlehttp/psr7": "^1.3",
-        "nyholm/nsa": "^1.0"
+        "symfony/http-client": "^5.0",
+        "nyholm/nsa": "^1.1",
+        "nyholm/psr7": "^1.3"
     },
     "autoload": {
         "psr-4": {
